--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <section class="places">
                 <div class="places__item">
                     <h2 class="places__title">Kyiv, Ukraine</h2>
-                    <img src="./images/seafront-town-x2.jpg" alt="" class="places__img">
+                    <figure class="galery__item"></figure><img src="./images/seafront-town-x2.jpg" alt="" class="places__img"></figure>
                     <button class="places__btn btn">Buy this artwork as NFT</button>
                     <div class="places__artist">
                         <div class="places__artist-box">
