--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <section class="places">
                 <div class="places__item">
                     <h2 class="places__title">Kyiv, Ukraine</h2>
-                    <figure class="galery__item"></figure><img src="./images/seafront-town-x2.jpg" alt="" class="places__img"></figure>
+                    <img src="./images/seafront-town-x2.jpg" alt="seafront town" class="places__img">
                     <button class="places__btn btn">Buy this artwork as NFT</button>
                     <div class="places__artist">
                         <div class="places__artist-box">
@@ -52,7 +52,7 @@
                 </div> 
                 <div class="places__item">
                     <h2 class="places__title">Cricieth, Wales</h2>
-                    <img src="./images/Cricieth-Wales.jpg" alt="" class="places__img">
+                    <img src="./images/Cricieth-Wales.jpg" alt="Cricieth Wales" class="places__img">
                     <button class="places__btn btn">Buy this artwork as NFT</button>
                     <div class="places__artist">
                         <div class="places__artist-box">
@@ -83,7 +83,7 @@
                 </div>  
                 <div class="places__item">
                     <h2 class="places__title">Muramvya, Burundi</h2>
-                    <img src="./images/Muramvya-Burundi.jpg" alt="Berea USA" class="places__img">
+                    <img src="./images/Muramvya-Burundi.jpg" alt="Muramvya Burundi" class="places__img">
                     <button class="places__btn btn">Buy this artwork as NFT</button>
                     <div class="places__artist">
                         <div class="places__artist-box">
@@ -100,12 +100,12 @@
                 </section>
 
                 <section class="cover">
-                    <img src="./images/practicum-art-gallery-background-cover.jpg" alt="" class="cover__img">
-                    <div alt="" class="cover__overlay"></div>
+                    <img src="./images/practicum-art-gallery-background-cover.jpg" alt="practicum art gallery background cover" class="cover__img">
+                    <div alt="overlay background" class="cover__overlay"></div>
                     <div class="cover__info">
                         <h2 class="cover__title">Visit us</h2>
-                        <p class="cover__description">Year-round </br>
-                            Practicum Art Gallery</br>
+                        <p class="cover__description">Year-round <br>
+                            Practicum Art Gallery<br>
                             404 Tim Berners-Lee Ave</p>
                         <button class="cover__btn btn">Buy tickets</button>
                     </div>
