--- a/index.html
+++ b/index.html
@@ -19,20 +19,22 @@
                 <img class="description__img" src="./images/kalegin-michail-179870-unsplash.jpg" alt="main illustration">    
             </section>
             <section class="intro">
-                <h2 class="intro__title">Know the places your online pals come from a little better</h2>
-                <blockquote class="intro__quote">Every human being is an artist, a freedom being, called to participate in transforming and reshaping the conditions, thinking, and structures that shape and inform our lives.</blockquote>
-                <p class="intro__quote-author">— Joseph Beuys</p>
-                <p class="intro__paragraph">The town of Practicum has brought together professionals from different corners of the world. Today, Practicum Art Gallery is proud to present stories and pictures from some of the people who dedicate their time and effort to making the future tech professionals of this town feel at home. Each of us has a unique story about the place we come from. Feel free to add your own story and a piece of visual art dedicated to your hometown to our collection. No matter where you're from, we're glad that you're our neighbor.</p>
-            </section>
-            <section class="galery">
-                <figure class="galery__item"><img class="galery__item-img" src="./images/city-beach-view.jpg" alt="seafront town"></figure>
-                <figure class="galery__item"><img class="galery__item-img" src="./images/seafront-town.jpg" alt="seafront town"></figure>
-                <figure class="galery__item"><img class="galery__item-img" src="./images/monastery-at-sunset.jpg" alt="seafront town"></figure>
-                <figure class="galery__item"><img class="galery__item-img" src="./images/city-view-from-birds-eye-view.jpg" alt="seafront town"></figure>
-                <figure class="galery__item"><img class="galery__item-img" src="./images/fields.jpg" alt="seafront town"></figure>
-                <figure class="galery__item"><img class="galery__item-img" src="./images/garden.jpg" alt="seafront town"></figure>
-                <figure class="galery__item"><img class="galery__item-img" src="./images/straw-and-wooden-house.jpg" alt="seafront town"></figure>
-                <figure class="galery__item"><img class="galery__item-img" src="./images/house-in-a-village.jpg" alt="seafront town"></figure>
+                <div class="intro__info">
+                    <h2 class="intro__title">Know the places your online pals come from a little better</h2>
+                    <blockquote class="intro__quote">Every human being is an artist, a freedom being, called to participate in transforming and reshaping the conditions, thinking, and structures that shape and inform our lives.</blockquote>
+                    <p class="intro__quote-author">— Joseph Beuys</p>
+                    <p class="intro__paragraph">The town of Practicum has brought together professionals from different corners of the world. Today, Practicum Art Gallery is proud to present stories and pictures from some of the people who dedicate their time and effort to making the future tech professionals of this town feel at home. Each of us has a unique story about the place we come from. Feel free to add your own story and a piece of visual art dedicated to your hometown to our collection. No matter where you're from, we're glad that you're our neighbor.</p>
+                </div>
+                <div class="galery">
+                    <figure class="galery__item"><img class="galery__item-img" src="./images/city-beach-view.jpg" alt="seafront town"></figure>
+                    <figure class="galery__item"><img class="galery__item-img" src="./images/seafront-town.jpg" alt="seafront town"></figure>
+                    <figure class="galery__item"><img class="galery__item-img" src="./images/monastery-at-sunset.jpg" alt="seafront town"></figure>
+                    <figure class="galery__item"><img class="galery__item-img" src="./images/city-view-from-birds-eye-view.jpg" alt="seafront town"></figure>
+                    <figure class="galery__item"><img class="galery__item-img" src="./images/fields.jpg" alt="seafront town"></figure>
+                    <figure class="galery__item"><img class="galery__item-img" src="./images/garden.jpg" alt="seafront town"></figure>
+                    <figure class="galery__item"><img class="galery__item-img" src="./images/straw-and-wooden-house.jpg" alt="seafront town"></figure>
+                    <figure class="galery__item"><img class="galery__item-img" src="./images/house-in-a-village.jpg" alt="seafront town"></figure>
+                </div>
             </section>
             <section class="places">
                 <div class="places__item">
@@ -101,7 +103,7 @@
 
                 <section class="cover">
                     <img src="./images/practicum-art-gallery-background-cover.jpg" alt="practicum art gallery background cover" class="cover__img">
-                    <div alt="overlay background" class="cover__overlay"></div>
+                    <div class="cover__overlay"></div>
                     <div class="cover__info">
                         <h2 class="cover__title">Visit us</h2>
                         <p class="cover__description">Year-round <br>
