--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                     <div class="cover__overlay"></div>
                     <div class="cover__info">
                         <h2 class="cover__title">Visit us</h2>
-                        <p class="cover__description">Year-round <br>
-                            Practicum Art Gallery<br>
+                        <p class="cover__description">Year-round
+                            Practicum Art Gallery
                             404 Tim Berners-Lee Ave</p>
                         <button class="cover__btn btn">Buy tickets</button>
                     </div>
