--- a/index.html
+++ b/index.html
@@ -105,9 +105,11 @@
                     <div class="cover__overlay"></div>
                     <div class="cover__info">
                         <h2 class="cover__title">Visit us</h2>
-                        <p class="cover__description">Year-round
-                            Practicum Art Gallery
-                            404 Tim Berners-Lee Ave</p>
+                        <div class="cover__text-box">
+                            <p class="cover__description">Year-round</p>
+                            <p class="cover__description">Practicum Art Gallery</p>
+                            <p class="cover__description">404 Tim Berners-Lee Ave</p>
+                        </div>
                         <button class="cover__btn btn">Buy tickets</button>
                     </div>
                     
