bugfix: add font face && remove absolote position

--- a/index.html
+++ b/index.html
@@ -101,17 +101,19 @@
                 </section>
 
                 <section class="cover">
-                    <img src="./images/practicum-art-gallery-background-cover.jpg" alt="practicum art gallery background cover" class="cover__img">
-                    <div class="cover__overlay"></div>
-                    <div class="cover__info">
-                        <h2 class="cover__title">Visit us</h2>
-                        <div class="cover__text-box">
-                            <p class="cover__description">Year-round</p>
-                            <p class="cover__description">Practicum Art Gallery</p>
-                            <p class="cover__description">404 Tim Berners-Lee Ave</p>
+                    <div  class="cover__img">
+                        <div class="cover__info">
+                            <h2 class="cover__title">Visit us</h2>
+                            <div class="cover__text-box">
+                                <p class="cover__description">Year-round</p>
+                                <p class="cover__description">Practicum Art Gallery</p>
+                                <p class="cover__description">404 Tim Berners-Lee Ave</p>
+                            </div>
+                            <button class="cover__btn btn">Buy tickets</button>
                         </div>
-                        <button class="cover__btn btn">Buy tickets</button>
                     </div>
+                    <div class="cover__overlay"></div>
+                   
                     
                 </section>
                 <footer class="footer">
