bugfix: more that 1280px screen resolutions backround color

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="./pages/index.css">
     <title>From Homeland to Homeland</title>
 </head>
-<body class="body">
-    <div class="page page_theme_dark">
+<body class="body body_theme_dark">
+    <div class="page">
         <header class="header">
             <img class="logo logo_place_header" src="./images/logo.svg" alt="practicum art galery">
            </header>
