--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="./pages/index.css">
     <title>From Homeland to Homeland</title>
 </head>
-<body class="body body_theme_dark">
+<body class="body">
     <div class="page">
         <header class="header">
-            <img class="logo logo_place_header" src="./images/logo.svg" alt="practicum art galery">
+            <img class="logo" src="./images/logo.svg" alt="practicum art galery">
            </header>
         <main class="content">
             <section class="description">
@@ -24,98 +24,90 @@
                     <p class="intro__quote-author">— Joseph Beuys</p>
                     <p class="intro__paragraph">The town of Practicum has brought together professionals from different corners of the world. Today, Practicum Art Gallery is proud to present stories and pictures from some of the people who dedicate their time and effort to making the future tech professionals of this town feel at home. Each of us has a unique story about the place we come from. Feel free to add your own story and a piece of visual art dedicated to your hometown to our collection. No matter where you're from, we're glad that you're our neighbor.</p>
                 </div>
-                <div class="galery">
-                    <figure class="galery__item"><img class="galery__item-img" src="./images/city-beach-view.jpg" alt="seafront town"></figure>
-                    <figure class="galery__item"><img class="galery__item-img" src="./images/seafront-town.jpg" alt="seafront town"></figure>
-                    <figure class="galery__item"><img class="galery__item-img" src="./images/monastery-at-sunset.jpg" alt="seafront town"></figure>
-                    <figure class="galery__item"><img class="galery__item-img" src="./images/city-view-from-birds-eye-view.jpg" alt="seafront town"></figure>
-                    <figure class="galery__item"><img class="galery__item-img" src="./images/fields.jpg" alt="seafront town"></figure>
-                    <figure class="galery__item"><img class="galery__item-img" src="./images/garden.jpg" alt="seafront town"></figure>
-                    <figure class="galery__item"><img class="galery__item-img" src="./images/straw-and-wooden-house.jpg" alt="seafront town"></figure>
-                    <figure class="galery__item"><img class="galery__item-img" src="./images/house-in-a-village.jpg" alt="seafront town"></figure>
-                </div>
+            </section>
+            <section class="galery">
+                <ul class="galery__list">
+                    <li class="galery__item"><img class="galery__item-img" src="./images/city-beach-view.jpg" alt="seafront town"></li>
+                    <li class="galery__item"><img class="galery__item-img" src="./images/seafront-town.jpg" alt="seafront town"></li>
+                    <li class="galery__item"><img class="galery__item-img" src="./images/monastery-at-sunset.jpg" alt="seafront town"></li>
+                    <li class="galery__item"><img class="galery__item-img" src="./images/city-view-from-birds-eye-view.jpg" alt="seafront town"></li>
+                    <li class="galery__item"><img class="galery__item-img" src="./images/fields.jpg" alt="seafront town"></li>
+                    <li class="galery__item"><img class="galery__item-img" src="./images/garden.jpg" alt="seafront town"></li>
+                    <li class="galery__item"><img class="galery__item-img" src="./images/straw-and-wooden-house.jpg" alt="seafront town"></li>
+                    <li class="galery__item"><img class="galery__item-img" src="./images/house-in-a-village.jpg" alt="seafront town"></li>
+                </ul>
             </section>
             <section class="places">
-                <div class="places__item">
+                <article class="places__item">
                     <h2 class="places__title">Kyiv, Ukraine</h2>
                     <img src="./images/seafront-town-x2.jpg" alt="seafront town" class="places__img">
                     <button class="places__btn btn">Buy this artwork as NFT</button>
-                    <div class="places__artist">
-                        <div class="places__artist-box">
-                            <p class="places__artist-title">ARTIST</p>
-                            <p class="places__artist-name">Natalia Dolgushina, content producer</p>
-                        </div>
+                    <div class="places__artist-box">
+                        <p class="places__artist-title">ARTIST</p>
+                        <p class="places__artist-name">Natalia Dolgushina, content producer</p>
                     </div>
                     <div class="places__description">
                         <p class="places__description-item">Kyiv (or Kiev), Ukraine's capital, is a large city located on the shores of the Dnipro river. Of course, no one in their right mind would swim in the river, unless they grew up here, in which case they've probably tried it at some point. Summers are hot here, and the winters are drafty, but the fall and the spring are are absolutely amazing.</p>
                         <p class="places__description-item">The city itself is a mix of pre-revolution, post-war and soviet architecture, all of it sprinkled with modified balconies. If you're on the right bank of the Dnipro, the landscape is difficult to traverse for people on bikes and those wearing heels. The left bank is considered far less interesting and prestigious though, even by people who live on the far outskirts of the right one.</p>
                     </div>
-                </div> 
-                <div class="places__item">
+                </article> 
+
+                <article class="places__item">
                     <h2 class="places__title">Cricieth, Wales</h2>
                     <img src="./images/Cricieth-Wales.jpg" alt="Cricieth Wales" class="places__img">
                     <button class="places__btn btn">Buy this artwork as NFT</button>
-                    <div class="places__artist">
-                        <div class="places__artist-box">
-                            <p class="places__artist-title">ARTIST</p>
-                            <p class="places__artist-name">Steffan Warren, lead editor</p>
-                            <p class="places__artist-name">Kseniya Glagoleva, project manager</p>
-                        </div>
+                    <div class="places__artist-box">
+                        <p class="places__artist-title">ARTIST</p>
+                        <p class="places__artist-name">Steffan Warren, lead editor</p>
+                        <p class="places__artist-name">Kseniya Glagoleva, project manager</p>
                     </div>
                     <div class="places__description">
                         <p class="places__description-item">The medieval ruin of Cricieth Castle overlooks the town below from a rock that juts out into the sea. It is thought to have been built by Llewelyn the Great in the 13th century. Some 900 years later, the self-styled Pearl of Wales on the Shores of Snowdonia has become a popular tourist destination during the summer months.</p>
                         <p class="places__description-item">A short walk down the road from the castle, you can enjoy the world's best ice cream at Cadwalader's, whose secret ingredient is rumored to be locally sourced seaweed. Another claim to fame is the fact that Cricieth won the Wales in Bloom award for five years in a row for its spectacular floral displays around town. It was also home to David Lloyd George, the only Welshman ever to hold the office of Prime Minister of the UK.</p>
                     </div>
-                </div> 
-                <div class="places__item">
+                </article> 
+
+                <article class="places__item">
                     <h2 class="places__title">Berea, USA</h2>
                     <img src="./images/Berea-USA.jpg" alt="Berea USA" class="places__img">
                     <button class="places__btn btn">Buy this artwork as NFT</button>
-                    <div class="places__artist">
-                        <div class="places__artist-box">
-                            <p class="places__artist-title">ARTIST</p>
-                            <p class="places__artist-name">Travis Turner, author and editor</p>
-                        </div>
+                    <div class="places__artist-box">
+                        <p class="places__artist-title">ARTIST</p>
+                        <p class="places__artist-name">Travis Turner, author and editor</p>
                     </div>
                     <div class="places__description">
                         <p class="places__description-item">Berea is a small town located in the central part of Kentucky. The town is surrounded by beautiful forests and countryside. It's known as the arts and crafts capital of the state, and visitors will find plenty of shopping opportunities: shops with handmade jewelry, candles, wood items, galleries, glass studios, and more. The town holds a yearly festival celebrating "spoonbread", a local dish made with cornbread and served with a wooden spoon.</p>
                         <p class="places__description-item">However, it's probably known best for the local college. Berea College was founded in 1855 and was the first college in the south to be racially integrated, as well as the first to be coeducational. Somewhat uniquely, it charges no tuition — every student receives a full-tuition scholarship. </p>
                     </div>
-                </div>  
-                <div class="places__item">
+                </article>  
+
+                <article class="places__item">
                     <h2 class="places__title">Muramvya, Burundi</h2>
                     <img src="./images/Muramvya-Burundi.jpg" alt="Muramvya Burundi" class="places__img">
                     <button class="places__btn btn">Buy this artwork as NFT</button>
-                    <div class="places__artist">
-                        <div class="places__artist-box">
-                            <p class="places__artist-title">ARTIST</p>
-                            <p class="places__artist-name">Grevisse Kenguruka, tech editor</p>
-                        </div>
+                    <div class="places__artist-box">
+                        <p class="places__artist-title">ARTIST</p>
+                        <p class="places__artist-name">Grevisse Kenguruka, tech editor</p>
                     </div>
                     <div class="places__description">
                         <p class="places__description-item">Muramvya is one of the 18 provinces of Burundi. In the kingdom era, Muramvya was the royal capital and in 2007, because of its cultural and natural landscape, it was added to the UNESCO World Heritage Tentative List. It is located in the center of Burundi, between the country's political and economic capitals</p>
                         <p class="places__description-item">The weather is rather chilly at night, but during the day, you would think you're in heaven. At 2,665 meters (8,743 ft) above sea level, Mount Teza is one of the coldest places in the province. But that cool breeze allows for one of the largest plantations of tea and coffee in the country, which make up the bulk of Burundi's exports.</p>
                         <p class="places__description-item">The Kibira National Park, one of the largest wildlife reserves for apes, overlaps four provinces, including Muramvya. This National Park lies at the apex of the beautiful mountains of the Congo-Nile Divide, ranging between 1550 and 2660 meters of altitude. It is filled with beautiful vegetation, and a source for the various rivers and streams which provide water around the country.</p>
                     </div>
-                </div>                    
+                </article>                    
                 </section>
 
                 <section class="cover">
                         <div class="cover__info">
                             <h2 class="cover__title">Visit us</h2>
-                            <div class="cover__text-box">
-                                <p class="cover__description">Year-round</p>
-                                <p class="cover__description">Practicum Art Gallery</p>
-                                <p class="cover__description">404 Tim Berners-Lee Ave</p>
-                            </div>
+                                <p class="cover__description">Year-round Practicum&nbsp;Art&nbsp;Gallery 404&nbsp;Tim&nbsp;Berners-Lee&nbsp;Ave</p>
                             <button class="cover__btn btn">Buy tickets</button>
                         </div> 
                 </section>
-                
-                <footer class="footer">
-                    <p class="footer__author">&copy; 2021 Avi Dalal</p>  
-                </footer>
         </main>
+        <footer class="footer">
+            <p class="footer__author">&copy; 2021 Avi Dalal</p>  
+        </footer>
     </div> 
 </body>
 </html>
