--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="body">
     <div class="page">
         <header class="header">
-            <img class="logo" src="./images/logo.svg" alt="practicum art galery">
+            <img class="header__logo" src="./images/logo.svg" alt="practicum art galery">
            </header>
         <main class="content">
             <section class="description">
